<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/menu_home"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/menu_search"/>

    <item
        android:id="@+id/menu_feed"
        android:title="@string/menu_feed"
        android:icon="@drawable/menu_feed"/>

    <item
        android:id="@+id/menu_library"
        android:title="@string/menu_library"
        android:icon="@drawable/menu_library"/>

    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/menu_setting"/>
</menu>