<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tl_book_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp">


            <TableRow>

                <TextView
                    style="@style/TableTextLeftStyle_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tv_author"
                    style="@style/TableTextRightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableTextLeftStyle_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/publisher" />

                <TextView
                    android:id="@+id/tv_publisher"
                    style="@style/TableTextRightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TableTextLeftStyle_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/TableTextRightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>


            <TableRow>

                <TextView
                    style="@style/TableTextLeftStyle_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explanation" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/TableTextRightStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
